fix landing language switcher sizes on mobile devices

--- a/src/components/mobile-cards/mobile-cards-styles.module.scss
+++ b/src/components/mobile-cards/mobile-cards-styles.module.scss
@@ -21,10 +21,10 @@
     }
 
   .cardPage {
-    position: relative;
-    padding-top: 10px;
-    height: 100%;
+    padding-top: 2svh;
+    height: 100svh;
     .card {
+      position: relative;
       border: 1px solid $elephant;
       color: $white;
       min-width: 94vw;
@@ -32,7 +32,7 @@
       background: rgba($navy-he, 0.5);
       display: flex;
       flex-direction: column;
-      height: 100%;
+      height: 100svh;
       justify-content: space-between;
       @include backdropBlur();
 
@@ -141,26 +141,27 @@
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
         position: absolute;
-        height: 9px;
-        width: 34px;
-        z-index: 2;
-        top: -10px;
+        height: 3.5svh;
+        width: 38px;
+        z-index: $bring-to-front;
+        top: -2svh;
       }
     }
 
     .progress {
       @extend %bodyText;
+      align-items: center;
       border: 1px solid $elephant;
       border-radius: 2px;
       color: $white;
       display: flex;
-      height: 24px;
+      height: 3.5svh;
       justify-content: center;
       left: 16px;
       margin: 0;
       position: absolute;
-      top: -10px;
-      width: 34px;
+      top: -2svh;
+      width: 38px;
       z-index: 11;
 
       p {
